# focal

./: LICENSE  NOTICE.txt  README.md  index.html  pyproject.toml  requirements.txt  uv.yaml
.github/worklows/: ruff.yaml
confs/: dataset_3D.yaml
experiments/: active_vision.py  chrom.py  contrast.py  daynight.py  rotation_2D.py  segmentation.py  viewpoint_3D.py
focal/prompts/: co3d_prompts.csv  coco_prompts.csv  daynight_prompts.csv  objaverse_prompts.csv
focal/utils/: classifiers.py  co3d_all.csv  co3d_process.py  coco.py  datasets.py  diffusion.py  energy.py  equiadapt_classifier_utils.py  equiadapt_seg_utils.py  imagenet_classnames.py  nerf_dataset.py  trellis.py
patches/: objaverse_patch.patch  ovseg_patch.patch  trellis_patch.patch
scripts/: download_3D_libraries.sh  download_gaussian_splatting_datasets_models.sh  download_gaussian_splatting_libraries.sh  viewpoint_3D_process_co3d.py  viewpoint_3D_process_objaverse.py
